syntax = "proto3";
package Cratis.Chronicle.Contracts.ReadModels;
import "google/protobuf/empty.proto";

message IndexDefinition {
   string PropertyPath = 1;
}
message ReadModelDefinition {
   string Identifier = 1;
   string Name = 2;
   uint64 Generation = 3;
   string Schema = 4;
   repeated IndexDefinition Indexes = 5;
}
enum ReadModelOwner {
   None = 0;
   Client = 1;
   Server = 2;
}
message RegisterRequest {
   string EventStore = 1;
   ReadModelOwner Owner = 2;
   repeated ReadModelDefinition ReadModels = 3;
}
service ReadModels {
   rpc Register (RegisterRequest) returns (.google.protobuf.Empty);
}
